--- a/appdetails.json
+++ b/appdetails.json
@@ -2,8 +2,8 @@
   "ads":"true",
   "update":[{
     "version":"2.8.1600",
-    "title":"Supreme VPN надвігаєццо",
-    "description":"Сцуко!",
+    "title":"NightVPN - free VPN",
+    "description":"Free unlimited VPN for android proxy, security",
     "size":"https://git.io/JeY69"
   }],
   "blocked":[
@@ -16,7 +16,7 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-    {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"31.207.46.8","active":"true","signal":"a"},
-    {"id":1, "file":1, "city":"Sydney","country":"Australia","image":"australia","ip":"31.207.46.8","active":"true","signal":"b"},
+    {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"185.186.246.24 1194","active":"true","signal":"a"},
+    {"id":1, "file":0, "city":"Hamburg","country":"Germany","image":"germany","ip":"185.186.246.24 1194","active":"true","signal":"a"}
   ]
 }
