--- a/appdetails.json
+++ b/appdetails.json
@@ -1,11 +1,6 @@
 {
   "ads":"true",
-  "update":[{
-    "version":"2.8.1600",
-    "title":"NightVPN - free VPN",
-    "description":"Free unlimited VPN for android proxy, security",
-    "size":"https://git.io/JeY69"
-  }],
+  "update":[],
   "blocked":[
     {"id":0, "app":"com.android.game"},
     {"id":1, "app":"com.utorrent.client"},
