--- a/appdetails.json
+++ b/appdetails.json
@@ -11,7 +11,7 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-    {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"185.186.246.24 1194","active":"true","signal":"a"},
-    {"id":1, "file":0, "city":"Hamburg","country":"Germany","image":"germany","ip":"185.186.246.24 1194","active":"true","signal":"a"}
+    {"id":0, "file":0, "city":"Netherlands","country":"Netherlands","image":"netherlands","ip":"185.186.246.24 1194","active":"true","signal":"a"},
+    {"id":1, "file":0, "city":"Netherlands","country":"Netherlands","image":"netherlands","ip":"185.186.246.24 1194","active":"true","signal":"a"}
   ]
 }
