--- a/appdetails.json
+++ b/appdetails.json
@@ -1,17 +1,13 @@
 {
   "ads":"true",
-  "update":[],
-  "blocked":[
-    {"id":0, "app":"com.android.game"},
-    {"id":1, "app":"com.utorrent.client"},
-    {"id":2, "app":"com.torrent.client"},
-    {"id":3, "app":"com.tor.client"},
-    {"id":4, "app":"com.insta.client"},
-    {"id":5, "app":"com.facebook.client"},
-    {"id":6, "app":"com.get.client"}
-  ],
+  "update":[{
+    "version":"2.8.1600",
+    "title":"NightVPN - free VPN",
+    "description":"Free unlimited VPN for android proxy, security",
+    "size":"https://git.io/JeY69"
+  }],
   "free":[
-    {"id":0, "file":0, "city":"Netherlands","country":"Netherlands","image":"netherlands","ip":"185.186.246.24 1194","active":"true","signal":"a"},
-    {"id":1, "file":0, "city":"Netherlands","country":"Netherlands","image":"netherlands","ip":"185.186.246.24 1194","active":"true","signal":"a"}
+    {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"185.186.246.24 1194","active":"true","signal":"a"},
+    {"id":1, "file":0, "city":"Hamburg","country":"Germany","image":"germany","ip":"185.186.246.24 1194","active":"true","signal":"a"}
   ]
 }
