--- a/appdetails.json
+++ b/appdetails.json
@@ -7,7 +7,7 @@
     "size":"https://git.io/JeY69"
   }],
   "free":[
-    {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"185.186.246.24 1194","active":"true","signal":"a"},
-    {"id":1, "file":0, "city":"Hamburg","country":"Germany","image":"germany","ip":"185.186.246.24 1194","active":"true","signal":"a"}
+    {"id":0, "file":0, "city":"netherlands","country":"netherlands","image":"netherlands","ip":"185.186.246.24 1194","active":"true","signal":"a"},
+    {"id":1, "file":0, "city":"netherlands","country":"netherlands","image":"netherlands","ip":"185.186.246.24 1194","active":"true","signal":"a"}
   ]
 }
