--- a/appdetails.json
+++ b/appdetails.json
@@ -7,7 +7,11 @@
     "size":"https://git.io/JeY69"
   }],
   "free":[
-    {"id":0, "file":0, "city":"netherlands","country":"netherlands","image":"netherlands","ip":"185.186.246.24 1194","active":"true","signal":"a"},
-    {"id":1, "file":0, "city":"netherlands","country":"netherlands","image":"netherlands","ip":"185.186.246.24 1194","active":"true","signal":"a"}
+    {"id":0, "file":0, "city":"netherlands","country":"Netherlands","image":"netherlands","ip":"185.186.246.24 1194","active":"true","signal":"a"},
+    {"id":1, "file":0, "city":"netherlands","country":"Germany","image":"germany","ip":"185.186.246.24 1194","active":"true","signal":"a"}
+  ],
+  "premium":[
+    {"id":2, "file":0, "city":"New York","country":"usa","image":"usa","ip":"185.186.246.24 1194","active":"true","signal":"a"},
+    {"id":3, "file":0, "city":"Moscow","country":"russia","image":"russia","ip":"185.186.246.24 1194","active":"true","signal":"a"}
   ]
 }
